Fix: function overlap autoprefixer

--- a/code/Scss/mix/mixin.scss
+++ b/code/Scss/mix/mixin.scss
@@ -34,9 +34,3 @@ $breakpoints: (
 			+ 'Please make sure it is defined in `$breakpoints` map.';
 	}
 }
-@mixin gradient($direction, $list) { 
-	background: -webkit-linear-gradient($direction, $list);
-	background: -moz-linear-gradient($direction, $list);
-	background: -o-linear-gradient($direction, $list);
-	background: linear-gradient($direction, $list);  
-}
